compiler/tests/fixtures/invalid/semantics/reaction_location_all_operator.viv
// Invalid: reaction location uses 'all' operator

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
            location:
                all: @actor.home
